# Dragon-Miku

./: LICENSE  README.md  app.vue  bun.lockb  nuxt.config.ts  package-lock.json  package.json
components/: Header.vue
layouts/: default.vue
pages/: file-explorer.vue  index.vue
src-tauri/: Cargo.toml  keylist.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: act_converter.rs  converter.rs  lib.rs  pak.rs
