[package]
name = "dragon-miku"
version = "0.1.0"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
byteorder = "1.4"
indexmap = "1.7"
glob = "0.3"
win-msgbox = "0.2.1"
aes = "0.8.4"
cipher = { version = "0.4", features = ["block-padding"] }
ecb = "0.1.2"
block-padding = "0.3.3"
flate2 = "1.0.35"
rayon = "1.7"
